crates/elenchus-parser/tests/snapshots/errors__then_without_literal.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        RULE r:\n            WHEN x a\n            THEN\n        \"#)"
---
RESULT: 1 syntax error

[1/1] line 4, col 17
   |             THEN
   |                 ^
   problem : THEN expects a literal: [NOT] <Subject> <predicate> [<object>]
   syntax  : THEN <literal>
   example : THEN motor uses fast_path
